[workspace]
members  = ["widgets", "examples/*"]
resolver = "2"

[workspace.package]
description = "Quill Makepad UI Library."
authors     = ["Project Robius", "Tyrese Luo <tyreseluo@outlook.com>"]
categories  = ["makepad"]
edition     = "2021"
license     = "MIT"
version     = "0.1.0"

[workspace.dependencies]