[package]
name        = "quill-widgets"
description = "Quill Makepad UI Widgets."
edition     = "2021"
license     = "MIT"
version     = { workspace = true }

[dependencies]
makepad-widgets = { git = "https://github.com/tyreseluo/makepad/", branch = "fixed_makepad_version" }

[features]
Button = []
