[package]
name        = "quill-widgets"
description = "Quill Makepad UI Widgets."
edition     = "2021"
license     = "MIT"
version     = { workspace = true }

[dependencies]
makepad-widgets = { workspace = true }

[features]
# use the builtin makepad widgets, (recommended).
# If you don't want to use builtin widgets, you can remove this feature,
# but note that you need to check the official makepad-widgets crate's compatibility.
builtin-makepad-widgets = []
Button                  = []
